// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddGroupsForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="add_contact_groups"
  title="Add to Group"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Add the contact to a group",
        "form": undefined,
        "name": "Add to Group",
        "type": "add_contact_groups",
      }
    }
    onChange={[MockFunction]}
  />
  <p
    data-spec="label"
  >
    Select the group(s) to add the contact to.
  </p>
  <AssetSelector
    createPrefix="Create Group: "
    entry={
      Object {
        "value": Array [
          Object {
            "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
            "name": "Customers",
            "type": "group",
          },
          Object {
            "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
            "name": "Unsatisfied Customers",
            "type": "group",
          },
          Object {
            "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
            "name": "Early Adopters",
            "type": "group",
          },
          Object {
            "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
            "name": "Testers",
            "type": "group",
          },
          Object {
            "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
            "name": "Subscribers",
            "type": "group",
          },
        ],
      }
    }
    multi={true}
    name="Groups"
    noOptionsMessage="Enter a name to create a new group"
    onChange={[Function]}
    onCreateOption={[Function]}
    searchable={true}
  />
</Dialog>
`;

exports[`AddGroupsForm updates should allow switching from router: switch from router 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "groups": Array [
          Object {
            "name": "Subscriber",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "add_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`AddGroupsForm updates should handle updates and save: update 1`] = `
Array [
  Object {
    "groups": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
    "type": "add_contact_groups",
    "uuid": "0d8abccd-ad6d-4776-a642-d310d6f15835",
  },
  [Function],
]
`;
